# senseSearch

./: .coverage  docker-compose.yml
.playwright-mcp/: page-2026-04-18T16-20-56-092Z.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  conversation.py  health.py  search.py  search.py.bak  upload.py
backend/app/core/: config.py  database.py  milvus.py
backend/app/models/: __init__.py  content.py  conversation.py  user.py
backend/app/schemas/: __init__.py  auth.py  content.py  conversation.py
backend/app/services/: auth.py  content.py  conversation.py  embedding.py  file.py  index.py  llm.py  search.py  user.py  video.py
backend/tests/: conftest.py  test_auth.py  test_conversation.py  test_embedding.py  test_health.py  test_search.py  test_upload.py
docs/superpowers/plans/: 2026-04-19-github-oauth-plan.md
docs/superpowers/specs/: 2026-04-18-sensesearch-design.md  2026-04-19-autonomous-dev-plan.md  2026-04-19-github-oauth-design.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/search/: SearchContent.tsx  (+1 more)
frontend/components/: ChatBubble.tsx  ContentCard.tsx  Layout.tsx  LoginForm.tsx  RegisterForm.tsx  SearchBox.tsx
frontend/e2e/: e2e.spec.ts  playwright.config.ts
frontend/nginx/: nginx.conf
frontend/test/: setup.ts
scripts/: seed_data.py
(+16 files in other folders)
